--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Dashboard.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Dashboard.cshtml
@@ -6,7 +6,7 @@
 <table>
 <tr>
     <th>Advertiser</th>
-    <th>Campaign</th>
+    <th>Campaign (#Accts)</th>
     <th>Month Stats</th>
     <th></th>
 </tr>
