Get/SavePlatformTokens, etc

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
@@ -95,6 +95,7 @@ if (pGauge.Children != null)
     @Html.ActionLink("AdRoll", "IndexGauge", new { platform = Platform.Code_AdRoll }) |
     @Html.ActionLink("DBM", "IndexGauge", new { platform = Platform.Code_DBM }) |
     @Html.ActionLink("Facebook", "IndexGauge", new { platform = Platform.Code_FB }) |
+    @Html.ActionLink("YAM", "IndexGauge", new { platform = Platform.Code_YAM }) |
     @Html.ActionLink("(show all)", "IndexGauge")
     </text>
     <br /><br />
