EOM- AnalystRoles, Persons

--- a/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
@@ -11,6 +11,8 @@ Accounting Period:
 
 @Html.ActionLink("Advertisers", "Index", "Advertisers")<br />
 @Html.ActionLink("Affiliates", "Index", "Affiliates")<br />
+@Html.ActionLink("People", "Index", "People")<br />
+@Html.ActionLink("Assign Analysts", "Affiliates", "AnalystRoles")<br />
 <br />
 @Html.ActionLink("Accounting Sheet", "AccountingSheet", "Admin")<br />
 @Html.ActionLink("Affiliate Amounts", "AffiliateAmounts", "Workflow")<br />
