--- a/1/EomTool/EomToolWeb/Views/Affiliates/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Affiliates/Show.cshtml
@@ -44,6 +44,10 @@
             <td>@Html.LabelFor(m => m.payment_on_hold, "PaymentOnHold")</td>
             <td class="bold">@Html.DisplayFor(m => m.payment_on_hold)</td>
         </tr>
+        <tr>
+            <td>@Html.LabelFor(m => m.qb_name, "QBName")</td>
+            <td class="bold">@Html.DisplayFor(m => m.qb_name)</td>
+        </tr>
     </table>
 </fieldset>
 
