EOM- Edit IncomeTypes/UnitTypes (& codes)

--- a/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
@@ -13,6 +13,8 @@ Accounting Period:
 @Html.ActionLink("Affiliates", "Index", "Affiliates")<br />
 @Html.ActionLink("People", "Index", "People")<br />
 @Html.ActionLink("Assign Analysts", "Affiliates", "AnalystRoles")<br />
+@Html.ActionLink("Income Types", "Index", "IncomeTypes")<br />
+@Html.ActionLink("Unit Types", "Index", "UnitTypes")<br />
 <br />
 @Html.ActionLink("Accounting Sheet", "AccountingSheet", "Admin")<br />
 @Html.ActionLink("Affiliate Amounts", "AffiliateAmounts", "Workflow")<br />
