--- a/1/EomTool/EomToolWeb/Views/People/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/People/Index.cshtml
@@ -25,6 +25,7 @@ Accounting Period:
         <td>@person.last_name</td>
     </tr>
 }
+    <tr><td>&nbsp;</td></tr>
 </table>
 @Html.ActionLink("New Person", "NewPerson")
 <br /><br />
