AccountingView updates for Cost Code, plus seeding of inc types

--- a/1/EomTool/EomToolWeb/Views/UnitTypes/Edit.cshtml
+++ b/1/EomTool/EomToolWeb/Views/UnitTypes/Edit.cshtml
@@ -28,6 +28,8 @@
             </tr>
         </table>
         <br />
+        *Be careful with editing unit type names. If it is from Cake, this will prevent Cake campaigns from synching.*
+        <br />
         <input type="submit" value="Save" />
     </fieldset>
 }
