--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAccounts/Synch.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAccounts/Synch.cshtml
@@ -10,7 +10,7 @@
 {
     @Html.ValidationSummary()
     <fieldset>
-        <legend>Synch SearchAccount</legend>
+        <legend>Sync SearchAccount</legend>
         @Html.HiddenFor(m => m.SearchAccountId)
         <div style="float:left">
             <table>
@@ -38,7 +38,7 @@
         </div>
         <br style="clear:both" />
         <div style="margin-top:10px">
-            <input type="submit" value="Synch" />&nbsp;
+            <input type="submit" value="Sync" />&nbsp;
             @Ajax.ActionLink("cancel", "EditProfile", "SearchAdmin", new { spId = Model.SearchProfileId }, ajaxOptions)
         </div>
     </fieldset>
