--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Edit.cshtml
@@ -38,6 +38,10 @@
                     <td>@Html.LabelFor(m => m.CreativeURLFormat)</td>
                     <td>@Html.EditorFor(m => m.CreativeURLFormat)</td>
                 </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.Disabled)</td>
+                    <td>@Html.EditorFor(m => m.Disabled)</td>
+                </tr>
             </table>
             <br />
             <input type="submit" value="Save" />
