--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Index.cshtml
@@ -11,7 +11,7 @@
     <th></th>
     <th>Partner</th>
     <th style="text-align:right">ID</th>
-    <th>Ext Account</th>
+    <th colspan="2">Ext Account (X = disabled)</th>
     <th>External Id</th>
     <th>Network</th>
     <th>Stats</th>
@@ -25,6 +25,7 @@
     <td>@extAcct.Platform.Name</td>
     <td style="text-align:right">@extAcct.Id</td>
     <td>@extAcct.Name</td>
+    <td>@(extAcct.Disabled ? "X" : "")</td>
     <td>@extAcct.ExternalId</td>
     <td>@(extAcct.Network != null ? extAcct.Network.Name : "")</td>
     <td>
