--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/IndexGauge.cshtml
@@ -10,7 +10,7 @@
 
 <table>
 <tr>
-    <th colspan="3"></th>
+    <th colspan="4" style="text-align:right">X = disabled</th>
     <th colspan="2">Daily</th>
     <th colspan="2">Strategy</th>
     <th colspan="2">Creative</th>
@@ -22,7 +22,7 @@
 <tr>
     <th>Partner</th>
     <th style="text-align:right">ID</th>
-    <th>External&nbsp;Account&nbsp;&nbsp;&nbsp;</th>
+    <th colspan="2">External&nbsp;Account&nbsp;&nbsp;&nbsp;</th>
     <th>Earliest</th>
     <th>Latest</th>
     <th>Earliest</th>
@@ -43,7 +43,7 @@
 if (!Model.CampaignId.HasValue) // don't show Partner summaries if filtering by campaign
 {
     <tr style="font-weight:bold;background-color:aquamarine">
-        <td colspan="3">@pGauge.Platform.Name.Replace(' ', '_')&nbsp;-&nbsp;Summary:</td>
+        <td colspan="4">@pGauge.Platform.Name.Replace(' ', '_')&nbsp;-&nbsp;Summary:</td>
         <td style="text-align:right">@pGauge.Daily.EarliestDisp</td>
         <td style="text-align:right">@pGauge.Daily.LatestDisp</td>
         <td style="text-align:right">@pGauge.Strategy.EarliestDisp</td>
@@ -68,6 +68,7 @@ if (pGauge.Children != null)
         <td>@gauge.ExtAccount.Platform.Name</td>
         <td style="text-align:right">@gauge.ExtAccount.Id</td>
         <td>@gauge.ExtAccount.Name</td>
+        <td style="text-align:center">@(gauge.ExtAccount.Disabled ? "X" : "")</td>
         <td style="text-align:right">@gauge.Daily.EarliestDisp</td>
         <td style="text-align:right">@gauge.Daily.LatestDisp</td>
         <td style="text-align:right">@gauge.Strategy.EarliestDisp</td>
