Correct account order in Campaigns->Show

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Show.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Show.cshtml
@@ -32,7 +32,7 @@ External Accounts:
     <th>Stats</th>
     <th>List...</th>
 </tr>
-@foreach (var extAcct in Model.ExtAccounts)
+@foreach (var extAcct in Model.ExtAccounts.OrderBy(x => x.Platform.Name).ThenBy(x => x.Name))
 {
 <tr>
     <td>@extAcct.Platform.Name</td>
