--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Campaigns/Edit.cshtml
@@ -22,6 +22,10 @@
                     <td>@Html.LabelFor(m => m.Name, "Campaign Name")</td>
                     <td>@Html.EditorFor(m => m.Name)</td>
                 </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.BaseFee)</td>
+                    <td>@Html.EditorFor(m => m.BaseFee)</td>
+                </tr>
             </table>
             <br />
             Defaults
