--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/ExtAccounts/Edit.cshtml
@@ -31,6 +31,10 @@
                     <td>@Html.EditorFor(m => m.ExternalId)</td>
                 </tr>
                 <tr>
+                    <td>@Html.LabelFor(m => m.Filter)</td>
+                    <td>@Html.EditorFor(m => m.Filter)</td>
+                </tr>
+                <tr>
                     <td>@Html.LabelFor(m => m.Network)</td>
                     <td>@Html.DropDownListFor(m => m.NetworkId, networkSelectList, "(all)")</td>
                 </tr>
